--- a/practice.css
+++ b/practice.css
@@ -198,7 +198,7 @@ header {
 .search {
   height: 34px;
   width: 0;
-  background: url(./image/icons8-検索-50.png) left  center no-repeat;
+  background: url(icons8-検索-50.png) left  center no-repeat;
   background-size: 26px 26px;
   padding-left: 30px;
   font-size: 16px;
